--- a/build.yaml
+++ b/build.yaml
@@ -20,8 +20,7 @@
 ---
 include:
   - board: nice60
-    shield: nice60_peri
-  - board: nice60
+  - board: nice_nano_v2
     shield: nice60_dongle
-  - board: nice60
+  - board: nice_nano_v2
     shield: settings_reset
