--- a/build.yaml
+++ b/build.yaml
@@ -19,7 +19,7 @@
 #
 ---
 include:
-  - board: nice_nano_v2
+  - board: nice60
   - board: nice_nano_v2
     shield: nice60_dongle
   - board: nice_nano_v2
