--- a/build.yaml
+++ b/build.yaml
@@ -24,3 +24,5 @@ include:
     shield: nice60_dongle
   - board: nice_nano_v2
     shield: settings_reset
+  - board: nice60
+  shield: settings_reset
