--- a/boards/nice60_dongle/nice60_dongle.zmk.yml
+++ b/boards/nice60_dongle/nice60_dongle.zmk.yml
@@ -1,7 +1,7 @@
 file_format: "1"
 id: nice60_dongle
 name: The nice60_dongle
-type: shield
+type: board
 url: https://github.com/ehmnr/zmk-config-GP-dongle/
 features:
   - keys
