--- a/build.yaml
+++ b/build.yaml
@@ -21,6 +21,9 @@
 include:
   - board: nice60
     cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
-  - board: nice60_dongle
+  - board: nice_nano_v2
+    shield: nice60_dongle
+  - board: nice_nano_v2
+    shield: settings_reset
   - board: nice60
     shield: settings_reset
