--- a/boards/shields/nice60_dongle/nice60_dongle.conf
+++ b/boards/shields/nice60_dongle/nice60_dongle.conf
@@ -6,4 +6,4 @@ CONFIG_ZMK_SLEEP=n
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 CONFIG_ZMK_EXT_POWER=y
 CONFIG_ZMK_USB=y
-CONFIG_ZMK_BLE=n
+CONFIG_ZMK_BLE=y
