--- a/boards/shields/nice60_dongle/nice60_dongle.conf
+++ b/boards/shields/nice60_dongle/nice60_dongle.conf
@@ -5,5 +5,8 @@ CONFIG_ZMK_SLEEP=n
 # CONFIG_PM_DEVICE=n
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 CONFIG_ZMK_EXT_POWER=y
-CONFIG_ZMK_USB_INIT_PRIORITY=40
-CONFIG_ZMK_USB_HID_INIT_PRIORITY=41
+# CONFIG_USB_DEVICE_VID	int	The vendor ID advertised to USB	0x1D50
+# CONFIG_USB_DEVICE_PID	int	The product ID advertised to USB	0x615E
+CONFIG_USB_DEVICE_VID=0x1D50
+CONFIG_USB_DEVICE_PID=0x615C
+CONFIG_USB_DEVICE_PRODUCT="nice!60_GP"
