--- a/boards/shields/nice60_dongle/nice60_dongle.conf
+++ b/boards/shields/nice60_dongle/nice60_dongle.conf
@@ -9,4 +9,5 @@ CONFIG_ZMK_EXT_POWER=y
 # CONFIG_USB_DEVICE_PID	int	The product ID advertised to USB	0x615E
 CONFIG_USB_DEVICE_VID=0x1D50
 CONFIG_USB_DEVICE_PID=0x615C
+CONFIG_USB_DEVICE_SN="1123456789ABCDEF"
 CONFIG_USB_DEVICE_PRODUCT="nice!60_GP"
