--- a/boards/shields/nice60_dongle/nice60_dongle.conf
+++ b/boards/shields/nice60_dongle/nice60_dongle.conf
@@ -11,3 +11,5 @@ CONFIG_USB_DEVICE_VID=0x1D50
 CONFIG_USB_DEVICE_PID=0x615C
 CONFIG_USB_DEVICE_SN="1123456789ABCDEF"
 CONFIG_USB_DEVICE_PRODUCT="nice!60_GP"
+CONFIG_ZMK_USB=y
+CONFIG_ZMK_USB_HID=y
