--- a/boards/shields/nice60_dongle/nice60_dongle.conf
+++ b/boards/shields/nice60_dongle/nice60_dongle.conf
@@ -12,4 +12,5 @@ CONFIG_USB_DEVICE_PID=0x615C
 CONFIG_USB_DEVICE_SN="1123456789ABCDEF"
 CONFIG_USB_DEVICE_PRODUCT="nice!60_GP"
 CONFIG_ZMK_USB=y
-CONFIG_ZMK_USB_HID=y
+CONFIG_ZMK_USB_HID_INIT_PRIORITY=41
+CONFIG_ZMK_USB_INIT_PRIORITY=40
